src/styles/content.module.scss
/* index Page */
.body-flex {
  display: flex;
  .body-image {
    width: 40%;
    margin-right: 2rem;
  }
  .body-text {
    h2 {
      font-weight: bold;
    }
    p {
      margin: auto;
      padding: 0;
    }
  }
}

/* Artwork Page */
.link-title {
  text-decoration: none;
  color: var(--text-menu);
  &:hover {
    color: var(--text-hover);
  }
}

